--- a/app/src/main/res/layout/activity_mediateka.xml
+++ b/app/src/main/res/layout/activity_mediateka.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.MediatekaActivity">
+    tools:context=".mediateca.ui.MediatekaActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
