Создание фрагментов для Медиатека Активити

--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -176,4 +176,44 @@
         <item name="android:background">@color/black</item>
     </style>
 
+    <style name="Tabs.TextAppearance" parent="TextAppearance.AppCompat.Button">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="Tabs" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabTextAppearance">@style/Tabs.TextAppearance</item>
+        <item name="tabTextColor">?attr/colorOnSurface</item>
+        <item name="tabSelectedTextColor">?attr/colorOnSurface</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="tabIndicatorFullWidth">true</item>
+        <item name="tabIndicator">@drawable/tab_indicator_custom</item>
+        <item name="tabIndicatorColor">?attr/colorOnSurface</item>
+
+
+    </style>
+
+
+    <style name="MediaFavoriteFragment">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AddPlayList">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">14sp</item>
+        <item name="cornerRadius">54dp</item>
+    </style>
+
 </resources>
