--- a/app/src/main/res/layout/activity_mediateka.xml
+++ b/app/src/main/res/layout/activity_mediateka.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mediateca.ui.MediatekaActivity">
+    android:orientation="vertical"
+    tools:context=".media.ui.MediatekaActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- MaterialToolbar  -->
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/tool_bar_media"
+        style="@style/Toolbar.TitleText"
+        app:title="@string/media" />
+
+    <!-- Tabs -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Tabs"
+        />
+
+    <!-- ViewPager -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
