--- a/app/src/main/res/layout/fragment_audioplayer.xml
+++ b/app/src/main/res/layout/fragment_audioplayer.xml
@@ -11,7 +11,7 @@
         android:id="@+id/audioPlayer_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".player.ui.AudioplayerActivity">
+        tools:context=".player.ui.AudioplayerFragment">
 
         <!--Общий отступ для иконки назад, навания трека и альбома, инфоблока-->
         <androidx.constraintlayout.widget.Guideline
