--- a/app/src/main/res/layout/fragment_audioplayer.xml
+++ b/app/src/main/res/layout/fragment_audioplayer.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="28dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".player.ui.AudioplayerFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/audioPlayer_main"
