--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textSize">@dimen/headder</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight">500</item>
-        <item name="navigationIcon">@drawable/baseline_arrow_back_24_night</item>
+
     </style>
 
     <style name="MainButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -58,6 +58,7 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textFontWeight">400</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_custom</item>
     </style>
 
     <style name="ClearIconStyle">
