--- a/app/src/main/res/layout/fragment_favorite_tracks.xml
+++ b/app/src/main/res/layout/fragment_favorite_tracks.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     tools:context=".mediateca.ui.FavoriteTracksFragment">
 
-
     <ImageView
+        style="@style/NotFoundIconStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="106dp"
-        style="@style/NotFoundIconStyle"/>
+        android:layout_marginTop="106dp" />
 
     <TextView
+        style="@style/MediaFavoriteFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        style="@style/MediaFavoriteFragment"
-        android:textFontWeight="400"
-        android:text="@string/empty_media"/>
+        android:text="@string/empty_media"
+        android:textFontWeight="400" />
 
 </LinearLayout>
