--- a/app/src/main/res/layout/fragment_mediateka.xml
+++ b/app/src/main/res/layout/fragment_mediateka.xml
@@ -16,15 +16,14 @@
     <!-- Tabs -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         style="@style/Tabs"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <!-- ViewPager -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
