--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".mediateca.ui.PlaylistFragment">
 
     <Button
         android:id="@+id/addPlayList"
+        style="@style/AddPlayList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/AddPlayList"
-        android:text="@string/newPlayList"/>
+        android:text="@string/newPlayList" />
 
     <ImageView
         android:id="@+id/image_notFound_FragmentPlaylists"
+        style="@style/NotFoundIconStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="46dp"
-        style="@style/NotFoundIconStyle" />
+        android:layout_marginTop="46dp" />
 
     <TextView
         android:id="@+id/text_notFound_FragmentPlaylists"
+        style="@style/MediaFavoriteFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        style="@style/MediaFavoriteFragment"
         android:gravity="center"
-        android:textFontWeight="500"
-        android:text="@string/not_created_playlists"/>
+        android:text="@string/not_created_playlists"
+        android:textFontWeight="500" />
 
 
 </LinearLayout>
