--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,9 @@
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/baseline_search_24"
-        android:title="@string/button_search"/>
+        android:title="@string/button_search"
+        />
+
     <item
         android:id="@+id/meditekaFragment"
         android:icon="@drawable/baseline_library_music_24"
