--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,18 +6,15 @@
         <item name="colorPrimaryVariant">@color/light_blue</item>
         <item name="colorOnPrimary">@color/white</item>
 
-        <item name="colorSurface">@color/design_dark_default_color_background</item>
+        <item name="colorSurface">@color/black</item>
         <item name="colorOnSurface">@color/white</item>
 
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="android:navigationBarColor">?attr/colorSurface</item>
+
+        <item name="elevationOverlayEnabled">false</item>
     </style>
 
-
-
-<style name="Theme.PlaylistMaker.Mainscreen" parent="Base.Theme.PlaylistMaker">
-        <item name="android:background">@color/design_dark_default_color_background</item>
-    </style>
 
 
 </resources>
